# EZ_architecture

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  test_beq  test_beq.cpp  test_program.hex  watch_and_build.sh
examples/: QUICK_REFERENCE.md  README.md  SUMMARY.md  TEMPLATE.txt  TEMPLATE_ANNOTATED.md  run_all_tests.sh  test_addition.txt  test_assembly.txt  test_branch.hex  test_branch.txt  test_disasm.txt  test_loop.hex  test_loop.txt  test_memory.hex  test_memory.txt  test_run.txt  test_saveload.txt  test_stages.txt
include/cli/: command_parser.hpp  input_handler.hpp  output_formatter.hpp
include/core/: alu.hpp  cpu.hpp  decoder.hpp  instruction.hpp  memory.hpp  register_file.hpp  register_names.hpp  types.hpp
include/gui/: button.hpp  cpu_visualizer.hpp  custom_shapes.hpp  datapath_view.hpp  instruction_builder_view.hpp  instruction_cache.hpp  instruction_queue_view.hpp  instruction_view.hpp  memory_view.hpp  register_view.hpp  style.hpp
src/: CMakeLists.txt
src/cli/: command_parser.cpp  input_handler.cpp  main_cli.cpp  output_formatter.cpp
src/core/: alu.cpp  cpu.cpp  decoder.cpp  instruction.cpp  memory.cpp  register_file.cpp
src/gui/: button.cpp  cpu_visualizer.cpp  datapath_view.cpp  instruction_builder_view.cpp  instruction_cache.cpp  instruction_queue_view.cpp  instruction_view.cpp  main_gui.cpp  memory_view.cpp  register_view.cpp
tests/: CMakeLists.txt  test_alu.cpp  test_command_parser.cpp  test_cpu.cpp  test_instruction.cpp  test_memory.cpp  test_register_file.cpp
